Need to fix the hover effects and spacing on homepage

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ h1 {
     border-radius: 5%;
     position: relative;
     z-index: 5;
-    margin-top: 10em;
+    margin-top: 10.5em;
     margin-bottom: 5em;
 }
 
